--- a/src/main/webapp/codepad/index.htm
+++ b/src/main/webapp/codepad/index.htm
@@ -11,6 +11,9 @@
         <link rel="shortcut icon" type="image/x-icon" href="${baseUrl}/static/modules/codepad/img/codepad.ico" />
     	<script>
     	var baseUrl = '${baseUrl}';
+    	var duoshuoQuery = {
+    		short_name: "codepad"
+    	};
     	</script>
     </head>
     <body class="easyui-layout">
@@ -109,7 +112,7 @@
         <script type="text/javascript" src="${baseUrl}/static/js/desktop-notify.js"></script>
         <script type="text/javascript" src="${baseUrl}/static/ckeditor/plugins/codesnippet/lib/highlight/highlight.pack.js"></script>
         <script>hljs.initHighlightingOnLoad();</script>
-        <!-- <script type="text/javascript" src="http://static.duoshuo.com/embed.js"></script> -->
+        <script type="text/javascript" src="http://static.duoshuo.com/embed.js"></script>
         <script type="text/javascript" src="${baseUrl}/static/mCustomScrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
         <script type="text/javascript" src="${baseUrl}/static/modules/codepad/js/codepad.js"></script>
     </body>
