--- a/src/main/webapp/codepad/index.htm
+++ b/src/main/webapp/codepad/index.htm
@@ -41,8 +41,8 @@
         <div data-options="region:'center',split:false,title:' ',border:false,headerCls:'region-header'" >
             <!-- tab栏 -->
             <div id="content_tab" class="easyui-tabs" data-options="fit:true,border:false,plain:true,pill:true">
-                <div title="首页" data-options="closable:false">
-                    
+                <div title="首页" data-options="closable:false,bodyCls: 'content-tab-content'" id="home_page">
+                    <table id="article_list_table"></table>
                 </div>
             </div>
         </div>
