++返回顶部&返回底部

--- a/src/main/webapp/codepad/index.htm
+++ b/src/main/webapp/codepad/index.htm
@@ -43,7 +43,9 @@
                     </div>
                     <div id="article_pagination"></div>
                     <div class="ds-guest">
+                    	<span id="page_up" class="icon-png icon-m-arrow-up" onclick="$('#home_page').mCustomScrollbar('scrollTo','top');">&nbsp;</span>
                     	<span id="ds_guest_icon" class="icon-png icon-m-user-message">&nbsp;</span>
+                    	<span id="page_down" class="icon-png icon-m-arrow-down" onclick="$('#home_page').mCustomScrollbar('scrollTo','bottom');">&nbsp;</span>
 			         	<ul class="ds-recent-visitors" data-num-items="10"></ul>
 			         	<ul class="ds-recent-comments" data-num-items="5" data-show-avatars="1" data-show-title="0"></ul>
 					</div>
