--- a/src/main/webapp/codepad/index.htm
+++ b/src/main/webapp/codepad/index.htm
@@ -38,7 +38,7 @@
         <div data-options="region:'center',split:false,title:' ',border:false,headerCls:'region-header'" >
             <!-- tab栏 -->
             <div id="content_tab" class="easyui-tabs" data-options="fit:true,border:false,plain:true,pill:true">
-                <div title="首页" data-options="closable:false,bodyCls: 'content-tab-content mCustomScrollbar'" id="home_page">
+                <div title="博客文章" data-options="closable:false,bodyCls: 'content-tab-content mCustomScrollbar',iconCls:'icon-m-copy'" id="home_page">
                     <div class="article_item" id="article_item">
                     </div>
                     <div id="article_pagination"></div>
@@ -46,6 +46,7 @@
                     	<span id="page_up" class="icon-png icon-m-arrow-up" onclick="$('#home_page').mCustomScrollbar('scrollTo','top');">&nbsp;</span>
                     	<span id="ds_guest_icon" class="icon-png icon-m-user-message">&nbsp;</span>
                     	<span id="page_down" class="icon-png icon-m-arrow-down" onclick="$('#home_page').mCustomScrollbar('scrollTo','bottom');">&nbsp;</span>
+                    	<span id="page_refresh" class="icon-png icon-reload" onclick="refresh_home_page();">&nbsp;</span>
 			         	<ul class="ds-recent-visitors" data-num-items="10"></ul>
 			         	<ul class="ds-recent-comments" data-num-items="5" data-show-avatars="1" data-show-title="0"></ul>
 					</div>
