--- a/src/main/webapp/codepad/index.htm
+++ b/src/main/webapp/codepad/index.htm
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="baidu-site-verification" content="VCEF5PzQXB" />
         <title>CodePad</title>
 		<link rel="stylesheet" type="text/css" href="${baseUrl}/static/easyui/themes/gray/easyui.css">
 		<link rel="stylesheet" type="text/css" href="${baseUrl}/static/easyui/themes/icon.css">
